--- a/src/tabs.html
+++ b/src/tabs.html
@@ -4,11 +4,16 @@
     <!-- ここでpage開くたびに chrome.storage→取得→パースしてページ表示するように -->
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <title>syncTabCliper</title>
+    <script type="text/javascript" src="./tabs.js"></script>
 </head>
 <body>
-<div id="test">
+<div id="header">
     メニュー
 </div>
+<div id="main">
+
+</div>
+<div id="footer"></div>
 </body>
 </html>
 
