--- a/src/tabs.html
+++ b/src/tabs.html
@@ -5,10 +5,14 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <title>syncTabCliper</title>
     <script type="text/javascript" src="./tabs.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/uikit.min.css" />
+    <script src="js/uikit.min.js"></script>
+    <script src="js/uikit-icons.min.js"></script>
 </head>
 <body>
 <div id="header">
-    メニュー
+    <h1 class='uk-heading-primary'>SyncTabClipper</h1>
     <a href="#" id="all_clear">すべてのデータを削除する</a>
 </div>
 <div id="main">
