--- a/src/tabs.html
+++ b/src/tabs.html
@@ -5,14 +5,16 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <title>syncTabCliper</title>
     <script type="text/javascript" src="./tabs.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/uikit.min.css" />
+    <link rel="stylesheet" href="css/uikit.min.css"/>
     <script src="js/uikit.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
 </head>
 <body>
 <div id="header">
-    <h1 class='uk-heading-primary'>SyncTabClipper</h1>
+    <h1 class='uk-heading-primary uk-heading-divider'>
+        <img src="images/icon.svg" width="32" height="32"/>
+        SyncTabClipper
+    </h1>
     <a href="#" id="all_clear">すべてのデータを削除する</a>
 </div>
 <div id="main">
