--- a/src/tabs.html
+++ b/src/tabs.html
@@ -6,6 +6,8 @@
     <title>syncTabCliper</title>
     <script type="text/javascript" src="./tabs.js"></script>
     <link rel="stylesheet" href="css/uikit.min.css"/>
+    <link rel="icon" type="image/png" href="images/icon.png">
+
     <script src="js/uikit.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
 </head>
