export機能の実装

--- a/src/tabs.html
+++ b/src/tabs.html
@@ -32,6 +32,15 @@
                             すべてのデータを削除する
                         </a>
                     </li>
+                    <li>
+                        <a href="#" id="export_link"><span class="uk-margin-small-right"
+                                                                                    uk-icon="icon: pull"></span>
+                            export
+                        </a>
+                        <label for="export_body"></label>
+                        <textarea readonly id="export_body"></textarea>
+                    </li>
+
                 </ul>
             </div>
 
