テキストエリアの高さ調整

--- a/src/tabs.html
+++ b/src/tabs.html
@@ -36,8 +36,11 @@
                     <li class="uk-parent">
                         <a href="#"><span class="uk-margin-small-right" uk-icon="icon: pull"></span>export</a>
                         <ul class="uk-nav-sub">
-                            <li><label for="export_body"></label><textarea readonly id="export_body"></textarea></li>
-                            <li><button id="export_link">export実行</button></li>
+                            <li><label for="export_body"></label><textarea readonly id="export_body" rows=4></textarea>
+                            </li>
+                            <li>
+                                <button id="export_link">export実行</button>
+                            </li>
                         </ul>
                     </li>
                 </ul>
