jsファイルをディレクトリに移動

--- a/src/tabs.html
+++ b/src/tabs.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <title>syncTabCliper</title>
-    <script type="text/javascript" src="./tabs.js"></script>
+    <script type="text/javascript" src="js/tabs.js"></script>
     <link rel="stylesheet" href="css/uikit.min.css"/>
     <script src="js/uikit.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
