圧縮テスト

--- a/src/tabs.html
+++ b/src/tabs.html
@@ -3,6 +3,9 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <title>syncTabCliper</title>
+    <script src="js/zlib.js"></script>
+    <script src="js/zlib-deflate.js"></script>
+    <script src="js/zlib-inflate.js"></script>
     <script src="js/util.js"></script>
     <script src="js/tabs.js"></script>
     <link rel="stylesheet" href="css/uikit.min.css"/>
