--- a/src/tabs.html
+++ b/src/tabs.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>syncTabCliper</title>
     <script src="js/zlib.js"></script>
     <script src="js/zlib-deflate.js"></script>
     <script src="js/zlib-inflate.js"></script>
     <script src="js/tabs.js"></script>
-</head>
-<body>
-<div class="uk-container">
-    <div class="uk-grid">
+  </head>
+  <body>
+    <div class="uk-container">
+      <div class="uk-grid">
         <div class="uk-width-1-1">
-            <div id="header">
-            </div>
+          <div id="header"></div>
         </div>
-    </div>
+      </div>
 
-    <div class="uk-grid main-contents">
+      <div class="uk-grid main-contents">
         <div class="uk-width-expand" id="main"></div>
         <aside class="uk-width-auto" id="sidebar"></aside>
+      </div>
     </div>
-</div>
 
-<div id="footer"></div>
-</body>
+    <div id="footer"></div>
+  </body>
 </html>
-
